styles/Gallery.module.scss
@import './colors.module.scss';

.modalTitleWrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;

  * > .modalButton {
    margin-left: 0.5rem;
  }
  span > :last-child {
    margin-right: 1rem;
  }
}

.galleryWrapper, .galleryModal {
  display: flex;
  flex-direction: column;
  figure {
    max-height: 300px;
    text-align: center;
    > figcaption {
      font-size: 0.7rem;
    }
    img {
      width: auto;
      height: 100%;
      border: 2px solid $sand-light;
      &.highlight {
        cursor: zoom-in;
      }
    }
    video {
      border: 2px solid $sand-light;
      width: auto;
      height: 100%;
      &.highlight {
        cursor: zoom-in;
      }
    }
  }
  > div {
    display: flex;
    justify-content: center;
    &:last-child {
      margin-top: 2rem;
      >button {
        margin: 0 1rem;
      }
    }
  }
}

